cambios en un comentario

--- a/html/index.html
+++ b/html/index.html
@@ -85,7 +85,7 @@
         <input type="number" id="kwh">
         <button onclick="resultado()">calcular</button>
 
-    </section> <!-- fin de section estadisticas-->
+    </section> <!-- fin de section calculadora-->
 
     <footer>
 
